# malgeum

./: .envrc  .gitignore  README.md  flake.nix
.github/workflows/: ci.yml  client-windows.yml  release.yml
client/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/scripts/: gen-icons.mjs
client/src/: App.svelte  app.css
client/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json  tauri.macos.conf.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: audio_loopback.rs  main.rs  webview_permissions.rs
client/src/components/: CallPanel.svelte  ChannelView.svelte  Main.svelte  Onboarding.svelte
client/src/lib/: api.ts  call.ts  crypto.test.ts  crypto.ts  mixer.ts  store.svelte.ts  ws.ts
deploy/: .env.example  README.md  docker-compose.yml
docs/: CRYPTO.md  DECISIONS.md  PROTOCOL.md  SPIKE.md
server/: Cargo.toml  Dockerfile  Dockerfile.release
server/src/: main.rs  spaces.rs  state.rs
server/tests/: integration.rs
