[package]
name = "voicechats"
version = "0.1.0"
edition = "2021"
description = "Lightweight self-hosted voice/chat/screen-share for friends"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
